--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "node-api4-guided",
-  "version": "1.0.0",
-  "description": "Guided project for **Node API** module 4.",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/node-api4-guided.git"
-  },
-  "keywords": [],
-  "author": "Lambda School",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/node-api4-guided/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/node-api4-guided#readme",
-  "dependencies": {
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.0",
-    "knex": "^0.19.3",
-    "sqlite3": "^4.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.2"
-  }
+    "name": "node-api4-guided",
+    "version": "1.0.0",
+    "description": "Guided project for **Node API** module 4.",
+    "main": "index.js",
+    "scripts": {
+        "server": "nodemon index.js",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LambdaSchool/node-api4-guided.git"
+    },
+    "keywords": [],
+    "author": "Lambda School",
+    "bugs": {
+        "url": "https://github.com/LambdaSchool/node-api4-guided/issues"
+    },
+    "homepage": "https://github.com/LambdaSchool/node-api4-guided#readme",
+    "dependencies": {
+        "dotenv": "^8.1.0",
+        "express": "^4.17.1",
+        "helmet": "^3.21.0",
+        "knex": "^0.19.3",
+        "sqlite3": "^4.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.2"
+    }
 }
